Use CompactObjectHeaders